--- a/src/css/Categories.css
+++ b/src/css/Categories.css
@@ -60,6 +60,7 @@
     font-size: 1rem;
     font-family: 'Inter', sans-serif;
     color: #111;
+    background-color: #FFF !important;
 }
 
 .clear-btn, .chevron-btn {
